style: fix inline code baseline alignment (#771)

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -179,6 +179,11 @@
     --ifm-h5-font-size: 0.8rem;
   }
 
+  // Fixes inline code alignment in Firefox
+  code {
+    vertical-align: baseline;
+  }
+
   // We want this to only apply to inline code, so don't apply
   // this color to ``` code blocks nor any headings.
   :not(pre):not(h2):not(h3):not(h4):not(h5):not(h6) > code {
